# OpenSeimas

./: .env.template  .gitignore  README.md  generate_wikis.sh  launch_openplanter.sh  merger_plan_and_cursor_prompts.md  open_openplanter_gui.sh  package-lock.json  package.json  verify_openclaw.py
OpenPlanter/: .gitignore  CLAUDE.md  DEMO.md  Dockerfile  LICENSE  README.md  cast_to_video.py  demo.tape  docker-compose.yml  pyproject.toml  quickstart_investigation.py  record_demo.py
OpenPlanter/.claude/: settings.json
OpenPlanter/.claude/hooks/: stop-rules-reminder.sh
OpenPlanter/.github/workflows/: release.yml
OpenPlanter/agent/: __init__.py  __main__.py  builder.py  config.py  credentials.py  demo.py  engine.py  model.py  patching.py  prompts.py  replay_log.py  runtime.py  settings.py  textual_tui.py  tool_defs.py  tools.py  tui.py  wiki_graph.py
OpenPlanter/openplanter-desktop/: .gitignore  Cargo.toml
OpenPlanter/openplanter-desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
OpenPlanter/scripts/: build_findings_json.py  cross_link_analysis.py  entity_resolution.py  fetch_census_acs.py  fetch_epa_echo.py  fetch_fdic.py  fetch_fec.py  fetch_icij_leaks.py  fetch_ofac_sdn.py  fetch_osha.py  fetch_propublica_990.py  fetch_sam_gov.py  fetch_sec_edgar.py  fetch_senate_lobbying.py  fetch_usaspending.py  timing_analysis.py
OpenPlanter/tests/: conftest.py  test_bg_and_timeout.py  test_boundary_conditions.py  test_context_condensation.py  test_coverage_gaps.py  test_credentials.py  test_demo.py  test_engine.py  test_engine_complex.py  test_fetch_census_acs.py  test_fetch_epa_echo.py  test_fetch_fdic.py  test_fetch_fec.py  test_fetch_icij_leaks.py  test_fetch_ofac_sdn.py  test_fetch_osha.py  test_fetch_propublica_990.py  test_fetch_sam_gov.py  test_fetch_sec_edgar.py  test_fetch_senate_lobbying.py  test_fetch_usaspending.py  test_integration.py  test_integration_live.py  test_live_models.py  test_model.py  test_model_complex.py  test_patching.py  test_patching_complex.py  test_read_image.py  test_replay_log.py  test_session.py  test_session_complex.py  test_settings.py  test_streaming.py  test_textual_tui.py  test_tool_defs.py  test_tools.py  test_tools_complex.py  test_tui_progress.py  test_tui_repl.py  (+6 more)
OpenPlanter/wiki/: index.md  template.md
OpenPlanter/wiki/campaign-finance/: fec-federal.md  massachusetts-ocpf.md
OpenPlanter/wiki/contracts/: boston-open-checkbook.md  sam-gov.md  usaspending.md
OpenPlanter/wiki/corporate/: massachusetts-soc.md  sec-edgar.md
OpenPlanter/wiki/financial/: fdic-bankfind.md
OpenPlanter/wiki/infrastructure/: census-acs.md
OpenPlanter/wiki/international/: icij-offshore-leaks.md
(+413 files in other folders)
