[package]
name = "op-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
async-trait = "0.1"
tokio-util = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures = "0.3"
petgraph = { version = "0.7", features = ["serde-1"] }
walkdir = "2"
notify = "7"
strsim = "0.11"
crc32fast = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
axum = "0.8"
tokio-stream = "0.1"
