[package]
name = "op-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
op-core = { path = "../op-core" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
